bin_PROGRAMS = screenclone
screenclone_SOURCES = screenclone.cc
AM_CXXFLAGS = -Wall -std=gnu++0x $(xdamage_CFLAGS) $(xrandr_CFLAGS) $(x11_CFLAGS) $(xtst_CFLAGS) $(xcursor_CFLAGS) $(PTHREAD_CFLAGS)
screenclone_LDADD = $(xdamage_LIBS) $(xrandr_LIBS) $(x11_LIBS) $(xtst_LIBS) $(xcursor_LIBS) $(PTHREAD_LIBS)
